# User-Space-CPU-Blit-Prototype

./: README.md  run_DXGI.bat  run_GDI.bat  run_Magnifier.bat
DXGI_version/: CMakeLists_DXGI_backup.txt  CMakeLists_Mag_backup.txt  build.bat  build_magnifier.bat  check_dpi.ps1  detect_monitors.c  install_cpp_tools.bat  main_dxgi.cpp  main_magnifier.cpp
DXGI_version/build_mag/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DesktopCaptureMag.vcxproj  DesktopCaptureMag.vcxproj.filters  DesktopCaptureMagnifier.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
DXGI_version/build_mag/DesktopCaptureMag.dir/Release/: DesktopCaptureMag.exe.recipe
DXGI_version/build_mag/DesktopCaptureMag.dir/Release/DesktopC.40A8698A.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DXGI_version/build_mag/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
DXGI_version/build_mag/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog
DXGI_version/build_mag/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
DXGI_version/build_mag/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
GDI_version/: CMakeLists.txt  build.bat  main.cpp  main_gdi.cpp
